fix root path 404 error

--- a/vercel.json
+++ b/vercel.json
@@ -19,6 +19,10 @@
       "destination": "/server.js"
     },
     {
+      "source": "/",
+      "destination": "/index.html"
+    },
+    {
       "source": "/((?!api/.*).*)",
       "destination": "/index.html"
     }
